# Alistral

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  berger.toml  cliff.toml  flake.nix  out.sql  test_cmd.md
alistral_cli/: Cargo.toml
alistral_cli/.sqlx/: query-025adb03af09495adbd4c0511c4b1e9aff6c22f6d78ebafe145716b16ac9766c.json  query-1b0dbd988f063ce634b3c16c1aadd97baecfa0b7606bbd51a87a980598d55f57.json  query-1deee8acf798e2ef5eae8bc56b772fc5a051f5ac0ca82e50e10ce64a06f8aee9.json  query-2bee026c6abde03c1b73169c42dc4818b527106bd3bf71c6bdf945850883d0df.json  query-496c3ae0d9e64c949480db962c4f1c483023858d8b4abd64585d6c34a5a4e1ff.json  query-69ac20c8eed4e883fc7e95d4165369bfed69479147bd6b7e871a9d9e89c894c2.json  query-9f006b4a061a6fd0ac00c8befb53118eba2cba9876df694daf227f71840109de.json  query-c9895343c40f169ebb87d68027bece08d11ed3cf4196fc776daabbd07712dc7a.json  query-cb254eef1ad034810afa67bc36d3b167c129586431d9456a8f0980412df04fac.json  query-d04478c3c4683d72721bff7c61da4a41acd07509189dbd8bd7f189b6b45e35e4.json  query-fc83be319406e3c96e5a4ac846d46192b08412969ab363b0001dd4b9cae53809.json
alistral_cli/src/: main.rs
alistral_cli/src/database/: cleanup.rs  mod.rs
alistral_cli/src/datastructures/: mod.rs
alistral_cli/src/interface/: comp_arrow.rs  errors.rs  mod.rs  tracing.rs
alistral_cli/src/models/: client.rs  data_storage.rs  error.rs  hour_min.rs  maybe_reversed.rs  mod.rs  order_with.rs
alistral_cli/src/tools/: bumps.rs  daily.rs  mod.rs
alistral_cli/src/utils/: constants.rs  env.rs  mod.rs
alistral_core/: Cargo.toml
alistral_core/.sqlx/: query-982d590d2387f416e4d34c521f8a69777856d86f6624161c390f8112589bda48.json  query-de58a29c2c193b0406df44f6c3eccf08921c90729123f6ba552734151845af99.json  query-ec42995a8b476fa299b2d32a3e2e0b3da89fe8dabbb1beab4b9958cca43cce1e.json
alistral_core/src/: lib.rs
alistral_core/src/cli/: constants.rs  logger.rs  mod.rs  pg_styles.rs
alistral_core/src/datastructures/: listen_sorter.rs  mod.rs
alistral_core/src/models/: client.rs  error.rs  mod.rs  stat_periods.rs
alistral_core/src/traits/: mod.rs  sorter.rs  vec_like.rs
interzic/: Cargo.toml
interzic/.sqlx/: query-64d178bb85a2c6ec312e03dd29f801e7736f470f0e724c8163983fc227a15c70.json  query-7cdae1733f45e7a5de95124f9f78ebf5fac53ee777c214840dd660e49f42ba94.json  query-a5b94337f1f19db2fade86cce08011dc4592c38cea70307bf076b67378b67a66.json
interzic/migrations/: 0002_fix_unique_id_per_recording_service.sql
interzic/src/: database.db  error.rs  lib.rs
interzic/src/client/: builder.rs  mod.rs  subsonic.rs  youtube_client.rs
interzic/src/database/: external_id.rs  mod.rs  recording.rs
interzic/src/models/: external_id.rs  messy_recording.rs  mod.rs  playlist_stub.rs
interzic/src/utils/: macros.rs  mod.rs
musicbrainz_db_lite/: .gitignore  Cargo.toml  mod.rs
musicbrainz_db_lite/.github/: dependabot.yml
musicbrainz_db_lite/.github/workflows/: rust_check.yaml
musicbrainz_db_lite/.sqlx/: query-31ab24cdd5d9ebbaa90e27fbdbc7db9321189a2d8d76134b8f8e77d92270dd22.json  query-65a3eb3d702b5836f9113d8d13c99358ee3892d802663b0f21c5f3cf39e73b9a.json  query-af202039ef6a128a1a01c2b9ada5dd36cc2f8995945d43c9e855014804ff1047.json
musicbrainz_db_lite/doc/: start_developing.md
musicbrainz_db_lite/migrations/: 0002_remove_metadata.sql  0003_tags.sql  0004_genres.sql  0005_listen_msid_cascade.sql  0006_remove_worktype_quotes.sql  0009_isrcs.sql
musicbrainz_db_lite/musicbrainz_db_lite_macros/: Cargo.toml
musicbrainz_db_lite/musicbrainz_db_lite_macros/src/: database_atributes.rs  lib.rs  sql_gen.rs
musicbrainz_db_lite/musicbrainz_db_lite_schema/: .gitignore  Cargo.toml  schema.sql
musicbrainz_db_lite/musicbrainz_db_lite_schema/migrations/: 0001_initial_database.sql  0007_genres_relationships.sql  0008_urls.sql  0010_ended_relation.sql  0011_covert_art_data.sql
musicbrainz_db_lite/musicbrainz_db_lite_schema/src/: lib.rs
musicbrainz_db_lite/src/: lib.rs
musicbrainz_db_lite/src/api/: mod.rs
musicbrainz_db_lite/src/database/: conn_pool.rs  db_connection.rs  mod.rs  pool.rs  raw_conn_pool.rs
musicbrainz_db_lite/src/error/: mod.rs  sqlx_error.rs
musicbrainz_db_lite/src/models/: mod.rs
musicbrainz_db_lite/src/utils/: date_utils.rs  display.rs  mod.rs  regex.rs
sequelles/: Cargo.toml  README.md
sequelles/src/: lib.rs
sequelles/src/tables/: table.rs
sonartra/: Cargo.toml
sonartra/exemples/: test_radio.json
sonartra/src/: aliases.rs  error.rs  lib.rs  radio_item.rs  radio_variables.rs
sonartra/src/json/: layer.rs  mod.rs  radio.rs
sonartra/src/modules/: mod.rs  radio_module.rs
src/: main.rs
symphonize/: Cargo.toml
symphonize/.sqlx/: query-0212e6a79239741fed02925a7520c076eb17efe8bf633fae7809d74672ed47d0.json  query-3d21b4a310c4978c560ce26b5179decb2dbcc9b42f75664482790d7e40e7c695.json  query-619f4f26901f797623b0a57ac808f2ba3d7b64ecf7b91480e72984e2755d6c84.json  query-dc0abab03c8d0821bd5571759810c01f982b9425bcaa8e4443e9f8024495ac61.json  query-e10eb8b9830ea914dfc81685008f094f233530301a8bb1d5597054ad9f740ff0.json
symphonize/src/: client.rs  error.rs  lib.rs  utils.rs
symphonize/src/clippy/: clippy_lint.rs  lint_hint.rs  lint_link.rs  lint_result.rs  mod.rs
symphonize/src/music_providers/: bandcamp.rs  mod.rs
symphonize/src/sambl/: api_results.rs  lookup.rs  mod.rs
symphonize/src/testing/: mod.rs
symphonize/src/utils/: harmony.rs  mod.rs  regex.rs
symphonize/testing_data/: dash_eti.json  missing_artist_links.json  missing_recording.json  missing_release_barcode.json  missing_work.json
tuillez/: Cargo.toml
tuillez/src/: fatal_error.rs  formatter.rs  lib.rs  macros.rs  styles.rs
tuillez/src/components/: mod.rs  section.rs
tuillez/src/extensions/: chrono_exts.rs  mod.rs
tuillez/src/inquire_ext/: mod.rs  select_associated.rs  select_enum.rs
yumako_jams/: Cargo.toml
yumako_jams/exemples/: listenrate_radio.json  overdue_count.json  overdue_count_test.json  simple_radio.json  test_radio.json
yumako_jams/src/: aliases.rs  client.rs  error.rs  lib.rs  radio_item.rs  radio_stream.rs  radio_variables.rs
(+844 files in other folders)
