[package]
name = "alistral"
version = "0.5.12"
edition = "2024"
repository = "https://github.com/RustyNova016/alistral"
publish = true
license = "MIT"
description = "A CLI app containing a set of useful tools for Listenbrainz"
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
alistral_core = { path = "../alistral_core" }
interzic = { path = "../interzic", optional = true }
tuillez = { path = "../tuillez" }
musicbrainz-db-lite = { path = "../musicbrainz_db_lite", features = ["pretty_format"] }
symphonize = { path = "../symphonize", optional = true}

# Musicbrainz dependencies
#listenbrainz = "0.8.1"
listenbrainz = { branch = "alistral_version", git = "https://github.com/RustyNova016/listenbrainz-rs.git", default-features = false, features = ["tls-native"]}

inquire = "0.7.5"
itertools = "0.14.0"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.36.0"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["rc"] }
serde_json = "1.0.140"
extend = "1.2.0"
directories = "6.0.0"
reqwest = { version = "0.12.22", features = ["json"] }
rand = "0.9.2"
thiserror = "2.0.12"
derive_more = { version = "2.0.1", features = ["full"] }
derive-new = "0.7.0"
derive-getters = "0.5.0"
regex = "1.11.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros"] }
macon = "1.3.0"
async-fn-stream = "0.2.2"
zip = "4.2.0"
indoc = "2.0.6"
strsim = "0.11.1"
strum_macros = "0.27.2"
dotenvy = "0.15.7"
url = "2.5.4"

# Async
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "parking_lot"] }
streamies = "0.2.2"

# Cli
clap = { version = "4.5.42", features = [
    "unicode",
    "wrap_help",
    "derive",
    "color",
] }
clap_complete = "4.5.55"
clap-markdown = "0.1.5"
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.12"

# Other

[features]
#default = ["clippy"]
full = ["clippy", "musicbrainz", "lookup", "stats"]
musicbrainz = []
clippy = ["musicbrainz", "symphonize"]
lookup = ["legacy_ent_with_listen"]
legacy_ent_with_listen = []
radio = ["interzicf"]
stats = []
# Subcrates
interzicf = ["interzic"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.rust]
async_fn_in_trait = { level = "allow", priority = 1 }

[lints.clippy]
result_large_err = { level = "allow", priority = 1 }
