[package]
name = "alistral_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
musicbrainz-db-lite = { path = "../musicbrainz_db_lite" }

itertools = "0.14.0"
serde = "1.0.227"
owo-colors = "4.2.1"
chrono = "0.4.42"

# Async 
async-once-cell = "0.5.4"
futures = "0.3.31"
streamies = "0.2.2"

# Databasing
sequelles = "0.2.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "macros"] }

# Macros
bon = "3.7.2"
thiserror = "2.0.11"
snafu = { version = "0.8.9", features = ["rust_1_81"] }

# Tracing
tracing-indicatif = "0.3.11"
tracing = "0.1.41"
tuillez = "0.1.0"

# Other 
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"

[patch.crates-io]
sequelles = {git = "https://github.com/RustyNova016/sequelles", rev = "99b2aa533ef7e17f935b5647897c4676b588d09c"}
tuillez = {git = "https://github.com/RustyNova016/tuillez", rev = "9760b11841bc29b7101aea62b2f275dd34c6bdae"}
musicbrainz_rs = {git = "https://github.com/RustyNova016/musicbrainz_rs", rev = "60ab4d48a6898cc2fc8e0b6fc9fb774c64cfe8d2"}
listenbrainz_rs = { git = "https://github.com/RustyNova016/listenbrainz_rs", rev = "b859c43602cb9f1de08e1b4e7cf64026c581a26c" }