[package]
name = "alistral_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
musicbrainz-db-lite = { path = "../musicbrainz_db_lite" }

itertools = "0.14.0"
serde = "1.0.228"
owo-colors = "4.2.1"
chrono = "0.4.42"

# Async 
async-once-cell = "0.5.4"
futures = "0.3.31"
streamies = "0.2.2"

# Databasing
sequelles = { version = "0.2.0", features = ["chrono"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "macros"] }

# Macros
bon = "3.8.1"
thiserror = "2.0.11"
snafu = { version = "0.9.0", features = ["rust_1_81"] }

# Tracing
tracing-indicatif = "0.3.14"
tracing = "0.1.43"
tuillez = "0.1.0"

# Other 
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"

[patch.crates-io]
sequelles = {git = "https://github.com/RustyNova016/sequelles", rev = "8393f82ea91c8df6008459ac72a0e16a86fe20d7"}
tuillez = {git = "https://github.com/RustyNova016/tuillez", rev = "debb79bf8c8656a4eedb571177a8ffa3b9984e78"}
musicbrainz_rs = {git = "https://github.com/RustyNova016/musicbrainz_rs", rev = "d798ad783fca0c44ea618d787ae648a2037d2de5"}
listenbrainz_rs = { git = "https://github.com/RustyNova016/listenbrainz_rs", rev = "5fb2e388f61513c3bf798141822a2f0082dc2727" }