[package]
name = "interzic"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"
description = "Bunch of utilities to link musicbrainz data to different services"

[dependencies]

# --- MB ecosystem crates ---
musicbrainz_rs = {version = "0.12.0", features = ["extras"]}
#musicbrainz_rs = { branch = "develop", git = "https://github.com/RustyNova016/musicbrainz_rs.git", features = ["extras"]}

#TODO: Make musicbrainz-db-lite optional
musicbrainz-db-lite = { path = "../musicbrainz_db_lite" }
#listenbrainz = "0.8.1"
listenbrainz = { branch = "alistral_version", git = "https://github.com/RustyNova016/listenbrainz-rs.git", default-features = false, features = ["tls-native"] }


# Tracing
tuillez = "0.1.0"
tracing = "0.1.44"

# --- Service crates ---
google-youtube3 = "6.0.0"

# --- Other crates ---
regex = "1.11.3"
sqlx = "0.8.2"
thiserror = "2.0.3"
governor = "0.10.2"
serde = "1.0.228"
serde_json = "1.0.145"
futures = "0.3.31"
async-fn-stream = "0.3.0"

[lints.clippy]
result_large_err = { level = "allow", priority = 1 }

[patch.crates-io]
sequelles = {git = "https://github.com/RustyNova016/sequelles", rev = "ecdfec3c83c610dbe6f69dd2b19447acbc895287"}
tuillez = {git = "https://github.com/RustyNova016/tuillez", rev = "debb79bf8c8656a4eedb571177a8ffa3b9984e78"}
musicbrainz_rs = {git = "https://github.com/RustyNova016/musicbrainz_rs", rev = "60ab4d48a6898cc2fc8e0b6fc9fb774c64cfe8d2"}
listenbrainz_rs = { git = "https://github.com/RustyNova016/listenbrainz_rs", rev = "14c1a52bc8cf62d3e867c944725d95b4826d563d" }