[package]
name = "interzic"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
description = "Bunch of utilities to link musicbrainz data to different services"

[dependencies]

# --- MB ecosystem crates ---
musicbrainz_rs = {version = "0.13.0", features = ["async", "rate_limit", "rustls", "extras", "tracing"]}
#musicbrainz_rs = { branch = "develop", git = "https://github.com/RustyNova016/musicbrainz_rs.git", features = ["extras"]}

#TODO: Make musicbrainz-db-lite optional
musicbrainz-db-lite = { path = "../musicbrainz_db_lite" }
#listenbrainz = "0.8.1"
listenbrainz = { branch = "alistral_version", git = "https://github.com/RustyNova016/listenbrainz-rs.git", default-features = false, features = ["tls-native"] }

# Tracing
tuillez = "0.1.0"
tracing = "0.1.43"

# Database
sqlx = "0.9.0"

# --- Service crates ---
google-youtube3 = { version = "6.0.0", optional = true }
submarine = { version = "0.1.1", optional = true, features = ["navidrome"] }

# --- Other crates ---
regex = "1.11.3"

thiserror = "2.0.18"
governor = "0.10.2"
serde = "1.0.228"
serde_json = "1.0.148"
futures = "0.3.31"
async-fn-stream = "0.3.0"
snafu = "0.9.0"
bon = "3.8.1"

[features]
default = []

youtube = ["dep:google-youtube3"]
subsonic = ["dep:submarine"]

backtrace = []

[lints.clippy]
result_large_err = { level = "allow", priority = 1 }

[patch.crates-io]
sequelles = {git = "https://github.com/RustyNova016/sequelles", rev = "ec68dc65b2635fd706e8b12ec66080aeda0d5fd7"}
tuillez = {git = "https://github.com/RustyNova016/tuillez", rev = "debb79bf8c8656a4eedb571177a8ffa3b9984e78"}
musicbrainz_rs = {git = "https://github.com/RustyNova016/musicbrainz_rs", rev = "9dcc97612c3f4b269c6781dbf5d8b0f5301c9308"}
listenbrainz_rs = { git = "https://github.com/RustyNova016/listenbrainz_rs", rev = "5fb2e388f61513c3bf798141822a2f0082dc2727" }
submarine = { git = "https://github.com/eppixx/submarine", rev = "6a9b0a929bacff1fd89b7b0dddd44ff906f1d666" }
