[package]
name = "musicbrainz-db-lite"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
extend = "1.2.0"
serde_json = "1.0.140"
itertools = "0.14.0"
serde = "1.0.227"
const_format = { version = "0.2.34" , features = ["rust_1_51", "rust_1_64", "assertcp"] }
reqwest = { version = "0.12.12", features = ["json"] }
governor = "0.10.0"
regex = "1.11.3"
url = "2.5.4"

# Musicbrainz
musicbrainz_rs = { version = "0.12.0", package = "musicbrainz_rs"  }
listenbrainz = { branch = "alistral_version", git = "https://github.com/RustyNova016/listenbrainz-rs.git", default-features = false, features = ["tls-native"] }

# Async
streamies = "0.2.2"
futures = "0.3.31"
tokio = { version = "1.45.1", features = [] }
async-recursion = "1.1.1"
async-fn-stream = "0.3.0"

# Databasing
sequelles = "0.2.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite"] }
deadpool = "0.12.3"

# Error handling
snafu = {version = "0.8.9", features = ["rust_1_81", "futures"]}
thiserror = "2.0.3"

# Logging
tracing = "0.1.41"
tuillez = { path = "../tuillez" }
owo-colors = { version = "4.2.1", optional = true}

# Macros
macon = "1.2.0" #TODO: Remove for bon

# Others
chrono = "0.4.42"


[features]
default = ["timeout_continue", "pretty_format"]
timeout_continue = []
pretty_format = ["dep:owo-colors"]

[dev-dependencies]
serial_test = "3.1.1"