[package]
name = "musicbrainz-db-lite"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
extend = "1.2.0"
serde_json = "1.0.145"
itertools = "0.14.0"
serde = "1.0.228"
const_format = { version = "0.2.34" , features = ["rust_1_51", "rust_1_64", "assertcp"] }
#reqwest = { version = "0.12.12", features = ["json"] }
regex = "1.11.3"
url = "2.5.4"

# Musicbrainz
musicbrainz_rs = { version = "0.12.0", package = "musicbrainz_rs"  }
listenbrainz = { branch = "alistral_version", git = "https://github.com/RustyNova016/listenbrainz-rs.git", default-features = false, features = ["tls-native"] }
listenbrainz_rs = { version = "0.1.0", features = ["async", "rate_limit", "tracing"]}

# Async
streamies = "0.2.2"
futures = "0.3.31"
tokio = { version = "1.47.0", features = [] }
async-fn-stream = "0.3.0"

# Databasing
sequelles = "0.2.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite"] }
deadpool = "0.12.3"

# Error handling
snafu = {version = "0.8.9", features = ["rust_1_81", "futures"]}
thiserror = "2.0.3"

# Logging
tracing = "0.1.44"
tuillez = "0.1.0"
owo-colors = { version = "4.2.1", optional = true}

# Macros
bon = "3.8.1"

# Debuging
hotpath = { version = "0.9.0", optional = true, features = ["futures"] }

# Others
chrono = "0.4.42"


[features]
default = ["timeout_continue", "pretty_format"]
timeout_continue = []
pretty_format = ["dep:owo-colors"]
backtrace = ["musicbrainz_rs/backtrace", "listenbrainz_rs/backtrace"]

# Debugging
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]

[dev-dependencies]
serial_test = "3.1.1"

[patch.crates-io]
sequelles = {git = "https://github.com/RustyNova016/sequelles", rev = "ecdfec3c83c610dbe6f69dd2b19447acbc895287"}
tuillez = {git = "https://github.com/RustyNova016/tuillez", rev = "debb79bf8c8656a4eedb571177a8ffa3b9984e78"}
musicbrainz_rs = {git = "https://github.com/RustyNova016/musicbrainz_rs", rev = "60ab4d48a6898cc2fc8e0b6fc9fb774c64cfe8d2"}
listenbrainz_rs = { git = "https://github.com/RustyNova016/listenbrainz_rs", rev = "14c1a52bc8cf62d3e867c944725d95b4826d563d" }
