[package]
name = "musicbrainz-db-lite"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
extend = "1.2.0"
serde_json = "1.0.148"
itertools = "0.14.0"
serde = "1.0.228"
const_format = { version = "0.2.34" , features = ["rust_1_51", "rust_1_64", "assertcp"] }
regex = "1.11.3"
url = "2.5.4"

# Api bindings
musicbrainz_rs = { version = "0.12.0", features = ["async", "rate_limit", "rustls", "extras", "tracing"]}
listenbrainz = { branch = "alistral_version", git = "https://github.com/RustyNova016/listenbrainz-rs.git", default-features = false, features = ["tls-native"] }
listenbrainz_rs = { version = "0.1.0", features = ["async", "rate_limit", "tracing"]}

# Async
streamies = "0.2.2"
futures = "0.3.31"
tokio = { version = "1.47.0", features = [] }
async-fn-stream = "0.3.0"

# Databasing
sequelles = "0.2.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite"] }
sea-query = { version = "0.32.7", default-features = false, features = ["backend-sqlite", "derive"] }
deadpool = "0.13.0"

# Error handling
snafu = {version = "0.9.0", features = ["rust_1_81", "futures"]}
thiserror = "2.0.3"

# Logging
tracing = "0.1.43"
tuillez = "0.1.0"
owo-colors = { version = "4.2.1", optional = true}

# Macros
bon = "3.8.1"

# Debuging
hotpath = { version = "0.14.0", optional = true, features = ["futures"] }

# Others
chrono = "0.4.42"

[dev-dependencies]
tokio = { version = "1.47.0", features = ["full"] }
serial_test = "3.3.1"


[features]
default = ["timeout_continue", "pretty_format"]
timeout_continue = []
pretty_format = ["dep:owo-colors"]
backtrace = ["musicbrainz_rs/backtrace", "listenbrainz_rs/backtrace"]

# Debugging
hotpath = ["dep:hotpath", "hotpath/hotpath", "musicbrainz_rs/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc", "musicbrainz_rs/hotpath-alloc"]

[patch.crates-io]
sequelles = {git = "https://github.com/RustyNova016/sequelles", rev = "ecdfec3c83c610dbe6f69dd2b19447acbc895287"}
tuillez = {git = "https://github.com/RustyNova016/tuillez", rev = "debb79bf8c8656a4eedb571177a8ffa3b9984e78"}
musicbrainz_rs = {git = "https://github.com/RustyNova016/musicbrainz_rs", rev = "d798ad783fca0c44ea618d787ae648a2037d2de5"}
listenbrainz_rs = { git = "https://github.com/RustyNova016/listenbrainz_rs", rev = "5fb2e388f61513c3bf798141822a2f0082dc2727" }
