[package]
name = "sequelles"
description = "Bunch of utilities to deal with SQLx data. Very opinionated"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["RustyNova"]
license = "MIT OR AGPL-3.0-or-later"
keywords = ["sqlx", "database", "data-structure", "development"]

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "sqlite"] }