[package]
name = "sonartra"
version = "0.1.0"
edition = "2021"

[dependencies]
alistral_core = { path = "../alistral_core" }
musicbrainz-db-lite = { path = "../musicbrainz_db_lite" }
tuillez = { path = "../tuillez" }

async-fn-stream = "0.2.2"
futures = "0.3.31"
json = "0.12.4"
serde = "1.0.217"
serde_json = "1.0.138"
thiserror = "2.0.11"
i_splits = "0.1.0"

[lints]
workspace = true

