[package]
name = "symphonize"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
musicbrainz-db-lite = { path = "../musicbrainz_db_lite" }
tuillez = "0.1.0"

thiserror = "2.0.11"
sqlx = "0.8.3"
owo-colors = "4.2.1"
regex = "1.11.3"
format-url = "0.6.2"
url = "2.5.4"
serde = "1.0.228"
serde_json = "1.0.148"
reqwest = "0.12.24"
tracing = "0.1.43"
governor = "0.10.2"
futures = "0.3.31"
streamies = {git = "https://github.com/RustyNova016/streamies.git", version = "0.3.0"}

[dev-dependencies]
tokio = "1.49.0"

[patch.crates-io]
sequelles = {git = "https://github.com/RustyNova016/sequelles", rev = "ecdfec3c83c610dbe6f69dd2b19447acbc895287"}
tuillez = {git = "https://github.com/RustyNova016/tuillez", rev = "debb79bf8c8656a4eedb571177a8ffa3b9984e78"}
musicbrainz_rs = {git = "https://github.com/RustyNova016/musicbrainz_rs", rev = "d798ad783fca0c44ea618d787ae648a2037d2de5"}
listenbrainz_rs = { git = "https://github.com/RustyNova016/listenbrainz_rs", rev = "e793fb35f7a5ef276ffad99ffb8d8b5c1e013248" }