[package]
name = "symphonize"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[dependencies]
musicbrainz-db-lite = { path = "../musicbrainz_db_lite" }
tuillez = "0.1.0"

thiserror = "2.0.18"
sqlx = "0.9.0"
owo-colors = "4.2.1"
regex = "1.11.3"
format-url = "0.6.2"
url = "2.5.4"
serde = "1.0.228"
serde_json = "1.0.148"
reqwest = "0.13.0"
tracing = "0.1.43"
governor = "0.10.2"
futures = "0.3.31"
streamies = {git = "https://github.com/RustyNova016/streamies.git", version = "0.3.0"}

[dev-dependencies]
tokio = "1.49.0"

[patch.crates-io]
sequelles = {git = "https://github.com/RustyNova016/sequelles", rev = "04918eda92d0602852cc50bb761da990159b6ff4"}
tuillez = {git = "https://github.com/RustyNova016/tuillez", rev = "debb79bf8c8656a4eedb571177a8ffa3b9984e78"}
musicbrainz_rs = {git = "https://github.com/RustyNova016/musicbrainz_rs", rev = "9dcc97612c3f4b269c6781dbf5d8b0f5301c9308"}
listenbrainz_rs = { git = "https://github.com/RustyNova016/listenbrainz_rs", rev = "2bb416832815f58169897ee687d6c4357c9d1115" }