[package]
name = "tuillez"
version = "0.1.0"
edition = "2021"

[dependencies]
color-backtrace = {git = "https://github.com/RustyNova016/color-backtrace.git", branch = "example", default-features = false, features = ["use-btparse-crate"]}
indicatif = "0.17.11"
owo-colors = "4.1.0"
tracing-indicatif = "0.3.9"
backtrace = "^0.3.48"

[lints]
workspace = true
