[package]
name = "musicbrainz_db_lite_schema"
version = "0.1.1"
edition = "2021"
description = "Schema generator for musicbrainz_db_lite"
rust-version = "1.81.0"

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite"] }


[dev-dependencies]
serial_test = "3.1.1"
tokio = { version = "1.44.2", features = ["full"] }